--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,13 @@ dependencies:
   bitsdojo_window: ^0.1.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  uuid: 3.0.7
+  uuid: ^3.0.7
   file_picker: ^10.3.8
   flex_color_picker: ^3.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter:
+  uses-material-design: true
