--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   uuid: ^3.0.7
   file_picker: ^10.3.8
   flex_color_picker: ^3.8.0
-  desktop_multi_window: ^0.3.0   # ⭐ 新增
+  desktop_multi_window: ^0.2.1
+  system_tray: ^2.0.3
+  tray_manager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +26,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon_16x16.ico
