--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   desktop_multi_window: ^0.2.1
   system_tray: ^2.0.3
   tray_manager: ^0.5.2
+  screen_retriever: ^0.1.9
 
 dev_dependencies:
   flutter_test:
